--- a/react01/vanilla_react_10.html
+++ b/react01/vanilla_react_10.html
@@ -19,7 +19,7 @@
       // 텍스트
       'h1',
       {
-        'name': '홍길동',
+        'name': '둘리',
         'address': '서울시 강서구',
       },
       'UI/UX 웹디자인 과정 수강중'
