--- a/react01/vanilla_react_10.html
+++ b/react01/vanilla_react_10.html
@@ -20,7 +20,7 @@
       'h1',
       {
         'name': '둘리',
-        'address': '서울시 강서구',
+        'address': '서울시 양천구',
       },
       'UI/UX 웹디자인 과정 수강중'
 
